<resources>
    <string name="app_name"></string>
    <string name="createproject">GoingDots</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="image_dialog_description">Image Preview</string>

    <string name="see_how"><u>see how it works</u></string>
    <string name="looking"><u>LOOKING FOR SIMPLE DISH IDEAS.</u></string>


    <string name="website">Website</string>
    <string name="directions">Directions</string>

    <string name="ingredients">e.g.\n1. Baking powder.\n2. Self-raising flour.\n3. Pinch salt.\n4. Full Cream Milk.</string>
    <string name="recipe">e.g.\n1. Put 20g flour,1mg salt.\n2. Put 2 Cups baking powder into a bowl and mix.\n3. Stir in the sugar.\n4. Pour in the warm milk.</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">Camera permission needed.  The application will now exit.</string>
    <string name="low_storage_error">Low device storage</string>
    <string name="title_activity_main">GoingDots</string>
    <string name="ocr_header">Click Button: SCAN DATE</string>
    <string name="read_text">Scan Date</string>
    <string name="done_text">Add Product</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Date scanned successfully</string>

    <string name="ocr_failure">No date captured</string>
    <string name="ocr_error">"Error reading date: %1$s"</string>


    <string-array name="gender_arrays">
        <item>Select here</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="wastereason_arrays">
        <item>Select Waste Reason</item>
        <item>Expiration Date</item>
        <item>Food Spoilage</item>
        <item>Badly Prepared</item>
        <item>Badly Cooked</item>
        <item>Poor Quality</item>
        <item>Partially Used</item>
    </string-array>

    <string-array name="consumereason_arrays">
        <item>Select Consume Category</item>
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner/Supper</item>
        <item>Snack/Other</item>

    </string-array>

    <string-array name="deliverymethods_arrays">

        <item>Select Delivery Method</item>
        <item>Customer to Collect</item>
        <item>Supplier to Deliver</item>

    </string-array>
    <string-array name="month_arrays">

        <item>Select here</item>
        <item>Male</item>
        <item>Female</item>

    </string-array>

    <string name="edit_reminder_title">Task Reminder - Edit</string>
    <string name="no_reminders">No Reminders Yet</string>
    <string name="menu_insert">Add Reminder</string>
    <string name="menu_delete">Delete Reminder</string>
    <string name="menu_settings">Settings</string>
    <string name="title">Product Name</string>
    <string name="body">Description</string>
    <string name="confirm">Confirm</string>
    <string name="edit_reminder">Edit Reminder</string>
    <string name="date">Reminder Date</string>
    <string name="time">Reminder Time</string>

    <!-- Toasts -->
    <string name="task_saved_message">Notification has been saved</string>

    <!-- Notification Bar -->
    <string name="notify_new_task_message">Product about to expire</string>
    <string name="notify_new_task_title">GoingDots Notification</string>
    <string name="notify_new_request_title">GoingDots House Request</string>
    <string name="notify_new_task_reminder">GoingDots Reminder</string>

    <!-- Preferences -->
    <string name="pref_category_task_defaults_key">task_default_category</string>
    <string name="pref_category_task_defaults_title">Task Title Default</string>
    <string name="pref_task_title_key">default_reminder_title</string>
    <string name="pref_task_title_dialog_title">Default Reminder Title</string>
    <string name="pref_task_title_message">The default title for a reminder.</string>
    <string name="pref_task_title_summary">Default title for reminders.</string>
    <string name="pref_task_title_title">Default Reminder Title</string>

    <string name="pref_category_datetime_key">date_time_default_category</string>
    <string name="pref_category_datetime_title">Date Time Defaults</string>
    <string name="pref_default_time_from_now_key">time_from_now_default</string>
    <string name="pref_default_time_from_now_dialog_title">Time From Now</string>
    <string name="pref_default_time_from_now_message">The default time from now that a new reminder should be set to.</string>
    <string name="pref_default_time_from_now_summary">Sets the default time for a reminder.</string>
    <string name="pref_default_time_from_now_title">Default Reminder Time</string>


    <string name="goingdotsterms"><sup>TM</sup></string>

</resources>
