<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
	xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"

	xmlns:tools="http://schemas.android.com/tools"
	android:background="@color/colorWhite"
	>

	<LinearLayout	
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="The Kitchen - Request Schedule"
			android:layout_marginTop="10dp"
			android:typeface="sans"
			android:textSize="20sp"
			android:layout_margin="5dp"
			android:gravity="center"
			android:textColor="@color/colorWhite"
			android:background="@drawable/button_bground_profile_premium"
			/>

		<Spinner
			android:id="@+id/spinnerassistant"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_margin="5dp"
			android:layout_marginTop="1dp"
			android:textAlignment="center"
			android:gravity="center"
			android:layout_gravity="center"
			android:textColor="#009111"
			android:background="@drawable/edittext_bground"
			android:padding="15dp"
			/>
		<Spinner
			android:id="@+id/spinnerrequesttype"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_margin="5dp"
			android:layout_marginTop="1dp"
			android:textAlignment="center"
			android:gravity="center"
			android:textColor="#009111"
			android:background="@drawable/edittext_bground"
			android:padding="15dp"
			/>
		<Button
			android:id="@+id/reminder_date"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_margin="5dp"
			android:text="@string/date"
			android:background="@drawable/button_bground"
			android:textColor="#009111"
			/>

		<Button
			android:id="@+id/reminder_time"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:text="@string/time"
			android:layout_margin="5dp"
			android:visibility="gone"
			android:background="@drawable/button_bground"
			android:textColor="#009111"
			/>


		<Button
                android:id="@+id/confirm"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/confirm"
                android:textSize="16sp"
			android:background="@drawable/button_bground"
			android:textColor="#009111"

                />

	</LinearLayout>
</ScrollView>