<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorWhite"
   >
    <ImageButton
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/dish"
        android:padding="5dp"
        android:scaleType="fitXY"
        android:id="@+id/search_idea"
        android:background="@color/colorWhite"
        android:visibility="invisible"

        />
        <ImageButton
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/search"
            android:padding="5dp"
            android:scaleType="fitXY"
            android:id="@+id/search"
            android:background="@color/colorWhite"
            android:layout_alignParentEnd="true"
            />


    <ImageView
        android:layout_width="150dp"
        android:layout_height="140dp"
        android:layout_marginTop="1dp"
        android:scaleType="fitXY"
        android:layout_gravity="center"
        android:id="@+id/productimage"
        android:layout_below="@id/search"
        android:src="@drawable/profilephoto"
android:layout_centerInParent="true"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:text="@string/ocr_header"
        android:id="@+id/status_message"
        android:visibility="gone"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/search"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/productimage"
        android:layout_marginStart="19dp"
        android:gravity="center" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/website"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/description"
        android:layout_centerHorizontal="true" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/website"
   android:id="@+id/bestbefore"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BB/Use: "
            android:textSize="15sp"
            android:textColor="@color/colorBlack"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_value"
            android:clickable="true"
            android:textSize="15sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:hint="can't scan click..."
                     />
        <ImageView
            android:id="@+id/moretap"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/finger_1"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edit"
            android:textSize="15sp"
            android:textColor="@color/colorBlack"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/counts"
        android:layout_gravity="center"
        android:gravity="center"
        >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/select"

            android:id="@+id/btn_select_action"
            android:background="@color/colorWhite"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
               android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:weightSum="2"
        >

        <Button
            android:id="@+id/btn_scan"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textColor="@color/colorWhite"
            android:layout_weight="1"
            android:layout_margin="5dp"

            android:background="@drawable/button_bground_receive"
            android:text="Scan Barcode"/>


        <Button
            android:id="@+id/read_text"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/button_bground_receive"
            android:text="@string/read_text"/>
    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_focus"
        android:id="@+id/auto_focus"
        android:layout_below="@+id/bestbefore"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:checked="true" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Warning"
        android:textColor="@color/colorRed"

        android:gravity="center"
        android:layout_marginTop="235dp"
        android:layout_below="@+id/status_message"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:textAlignment="center"
android:textColor="@color/colorPrimary"
        android:id="@+id/text_value_message"
        android:layout_below="@+id/status_message"
       android:layout_centerHorizontal="true"
        android:layout_marginTop="270dp"
        android:layout_alignRight="@+id/status_message"
        android:layout_alignEnd="@+id/status_message" />

    <TextView
        android:id="@+id/scan_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:textSize="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="360dp"
        android:layout_centerHorizontal="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/scan_content"
        android:id="@+id/counts"
        android:layout_gravity="center"
android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:text="Inventory  "
            android:textSize="15dp"
            android:layout_below="@+id/scan_content"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:id="@+id/txtcountinginvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"

            android:textSize="15dp"
            android:textColor="@color/colorRed"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" , Shopping List  "
            android:textSize="15dp"
            android:layout_below="@+id/scan_content"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:id="@+id/txtcountshopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"

            android:textSize="15dp"
            android:textColor="@color/colorRed"
            android:layout_centerHorizontal="true"
            />


    </LinearLayout>



    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_flash"
        android:id="@+id/use_flash"
        android:layout_alignTop="@+id/auto_focus"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:checked="false" />

</RelativeLayout>
